# QtVlcPlayerCpp

./: .gitignore  CMakeLists.txt  common.cpp  common.h  debug_window.cpp  debug_window.h  file_manager.cpp  file_manager.h  main.cpp  resources.qrc  ui_vlcplayer.cpp  vlcplayer.cpp  vlcplayer.h  vlcplayer.ui
